assets/css/main.css
/* ... */
.header__menu-item + .header__menu-item {
  margin-left: 12px;
}
.header__dropdown {
  position: relative;
}
.header__dropdown-select {
  cursor: pointer;
  display: flex;
  align-items: center;
  background-color: #f6f6f6;
  padding: 6px;
  border-radius: 15px;
  font-size: var(--secondary-font-size);
  font-weight: 600;
  letter-spacing: 1px;
}
.header__dropdown-selected {
  display: flex;
  align-items: center;
}
.header__dropdown-selected-nation {
  width: 24px;
  height: 24px;
  margin-right: 6px;
}
.header__dropdow-caret {
  margin-left: 6px;
  font-size: var(--secondary-font-size);
}

.header__dropdown-lists {
  position: absolute;
  top: calc(100% + 16px);
  right: 0;
  transform: translateY(100%);
  opacity: 0;
  visibility: hidden;
  transition: all ease-in-out 0.3s;
  min-width: 470px;
  background-color: var(--white-color);
  border: 1px solid #d6d6d6;
  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 10%);
  border-radius: 3px;
  padding: 0 1.6rem;
}
.header__dropdown--active .header__dropdown-lists {
  transform: translateY(0);
  opacity: 1;
  visibility: visible;
}
.header__dropdown-lists > .row {
  /* padding: 0.8rem 0; */
  position: relative;
}
.header__dropdown-lists > .row > .col:first-child {
  border-right: 1px solid #d6d6d6;
}
.header__dropdown-lists::before {
  content: "";
  position: absolute;
  top: -8px;
  right: 34px;
  width: 16px;
  height: 16px;
  background-color: var(--white-color);
  transform: rotate(45deg);
  border-top-left-radius: 3px;
  box-shadow: 0 0 0 1px rgb(6 44 82 / 10%), 0 2px 16px rgb(33 43 54 / 8%);
}
.header__dropdown-list {
  margin: 0;
  padding: 0.8rem 0;
  background-color: var(--white-color);
}
.header__dropdown-item {
  display: flex;
  align-items: center;
  padding: 0.8rem 0;
  cursor: pointer;
  transition: all ease-in-out 0.3s;
  line-height: 1.5;
}
.header__dropdown-item:hover {
  color: var(--secondary-color);
}
.header__dropdown-item + .header__dropdown-item {
  margin-top: 8px;
}
.header__dropdown-nation {
  width: 16px;
  height: 16px;
  border-radius: 50%;
}
.header__dropdown-text {
  padding: 0 1.2rem;
  white-space: nowrap;
  font-weight: 400;
}
.header__dropdown-checked {
  display: none;
  font-size: var(--secondary-font-size);
  color: #2c2c2c;
}
.header__dropdown-item.header__dropdown-item--active .header__dropdown-checked {
  display: inline-block;
}
/*Header responsive*/
.header__mobie-menu-open {
  display: none;
  font-size: 2.6rem;
  padding: 0.8rem;
}
.header__mobile-menu-overlay {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.8);
  animation: fadeIn ease-in-out 0.4s;
}
.header__mobile-menu-close {
  display: none;
  position: absolute;
  top: 0;
  right: 0;
  padding: 2rem;
}
.header__mobile-menu-close-icon {
  width: 24px;
  height: 24px;
}
.header__mobile-logo {
  display: none;
}
.header__mobile-logo-icon {
  width: 160px;
}
@media (min-width: 1200px) and (max-width: 1399px) {
  .header__search {
    width: auto;
  }
}
@media (min-width: 992px) and (max-width: 1199px) {
  .header__search {
    width: 300px;
  }
  .header__booking {
    display: none;
  }
}
@media (min-width: 768px) and (max-width: 991px) {
  .header__search {
    width: auto;
    min-width: 0;
  }
}
@media (max-width: 991px) {
  .header__with-search {
    width: 83.3333333%;
  }
  .header__search-wrap,
  .header__search {
    width: 100%;
    flex: 1;
  }
  .header__searchbar {
    flex: 1;
  }
  .header__search-input {
    width: 100%;
  }
  .header__mobie-menu-open {
    display: block;
  }
  .header__mobile-menu-close {
    display: block;
  }
  .header__menu {
    position: fixed;
    top: 0;
    left: 0;
    transform: translateX(-100%);
    transition: all ease-in-out 0.3s;
    width: 320px;
    max-width: 100%;
    overflow: hidden auto;
    height: 100%;
    background-color: var(--white-color);
    flex-direction: column;
    align-items: flex-start;
    padding: 20px;
    display: block;
  }
  .header__menu--mobile-opened.header__menu {
    transform: translateX(0);
  }
  .header__menu-item {
    width: 100%;
    margin: 0.5rem 0;
  }
  .header__menu-item + .header__menu-item {
    margin-left: 0;
  }
  .header__menu-link {
    display: block;
    line-height: 2.5;
    font-size: var(--primary-font-size);
    padding: 0;
  }
  .header__menu-link.is-become-host {
    padding-left: 1rem;
    margin: 0;
  }
  .header__menu-link.is-become-host::before {
    left: 50px;
  }
  .header__dropdown-select {
    height: 4.8rem;
    margin-top: 6px;
  }
  .header__dropdown-selected-currency {
    padding: 6px;
  }
  .header__dropdow-caret {
    margin-left: auto;
  }
  .header__dropdown-lists {
    top: 100%;
    min-width: 100%;
    transform: translateY(20%);
  }
  .header__dropdown-lists .row {
    flex-direction: column;
  }
  .header__dropdown-lists > .row > .col:first-child {
    border-right: none;
  }
}
@media (max-width: 767px) {
  :root {
    --header-height: 56px;
  }
  .header__logo,
  .header__booking,
  .header__search-submit {
    display: none;
  }
  .header__searchbar {
    margin: 0;
    height: 44px;
  }
  .header__mobile-logo {
    display: block;
  }
}
/*============================Slide show==========================*/
.slide-show {
  margin: 42px 0;
}
.slide-show__item {
  display: block;
}
.slide-show__item img {
  border-radius: 20px;
}
.slide-show .slick-dots {
  display: flex !important;
  position: absolute;
  bottom: 10px;
  right: 36px;
}
.slide-show .slick-dots button {
  font-size: 0;
  border-radius: 50%;
  width: 8px;
  height: 8px;
  border: none;
  outline: none;
  padding: 0;
  background-color: rgba(0, 0, 0, 0.2);
  margin-left: 10px;
}
.slide-show .slick-active button {
  background-color: rgba(0, 0, 0, 0.5);
}

/*===================Greeting section==================*/
.section-greeting {
  margin-bottom: -20px;
}
.section-greeting__heading {
  font-size: 2.8rem;
  margin-bottom: 20px;
}
/* ... */

